[project]
name = "listofcases"
version = "0.1.0"
description = ""
authors = [
    {name = "Admin",email = "5567504@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (==3.18.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "alembic (>=1.15.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
